# AgentInception

./: .gitignore  README.md  _smoke.py  package.json  pnpm-lock.yaml  turbo.json
apps/agent-runner/: .env.example  README.md  package.json  pyproject.toml  requirements.txt
apps/agent-runner/agent_runner/: __init__.py  actions.py  bank_slots.py  browser.py  cli.py  config.py  dom.py  errors.py  frames.py  inference_client.py  loop.py  metrics.py  steplog.py  tokenizer.py
apps/agent-runner/scripts/: record_transcript.py
apps/agent-runner/src/: __init__.py
apps/agent-runner/tests/: conftest.py  fakes.py  test_action_execution_each_type.py  test_browser_robustness.py  test_dom_extraction_truncation.py  test_e2e_real_engine.py  test_frame_streamer.py  test_kv_savings_formula.py  test_loop_against_mock.py  test_malformed_action_retry.py  test_playwright_driver.py  test_popup_chaos.py  test_steplog_readback.py  test_steplog_wiring.py  test_token_counters_monotonic.py
apps/agent-runner/tests/fixtures/pages/: hn_front.html  hn_item.html  popup.html
apps/bank-compiler/: .env.example  package.json  pyproject.toml  requirements.txt
apps/bank-compiler/efficacy/: __init__.py  harness.py
apps/bank-compiler/efficacy/probes/: hn_front.json  hn_item.json  popup_demo.json
apps/bank-compiler/src/: __init__.py
apps/bank-compiler/src/bank_compiler/: __init__.py  __main__.py  cli.py  compiler.py  dom_extract.py  encoder.py  provenance.py  summarizer.py
apps/bank-compiler/tests/: conftest.py  test_compiler_and_cli.py  test_dom_extract.py  test_encoder.py  test_summarizer.py
apps/inference-engine/: .env.example  package.json  pyproject.toml  requirements.txt
apps/inference-engine/scripts/: bench_mi.py  prove_injection.py
apps/inference-engine/src/: __init__.py  main.py
apps/inference-engine/src/inference_engine/: bank_registry.py  config.py  engine.py  mi_attention.py  schemas.py  server.py  service.py  tracing.py  ws_hub.py
apps/inference-engine/tests/: conftest.py  fakes.py  test_bank_changes_logits.py  test_bank_registry.py  test_config.py  test_gpu_boot.py  test_gqa_expansion.py  test_mi_numerical_hardening.py  test_pass_through.py  test_position_independence.py  test_smoke.py  test_step_endpoint.py  test_ws_events.py
apps/web-console/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web-console/app/: globals.css  layout.tsx  page.tsx
apps/web-console/components/: Header.tsx  LayerInjectionGraph.tsx  LogsMathPanel.tsx  StepTimeline.tsx  TokenComparator.tsx  ViewportPanel.tsx
apps/web-console/e2e/: dashboard.spec.ts
apps/web-console/e2e/fixtures/: generate-fixture.mjs  real-run.json
apps/web-console/lib/: eventReducer.ts  events.ts  useEventFeed.ts
apps/web-console/lib/__tests__/: eventReducer.test.ts  reconnect.test.ts
banks/: .gitkeep  hn_front.summary.txt  hn_item.summary.txt  manifest.json  popup_demo.summary.txt
demo-assets/popup-page/: index.html
demo-assets/popup-page/tests/: test_popup_modal.py
demo-assets/snapshots/: .gitkeep  hn_front.html  hn_front.meta.json  hn_item.html  hn_item.meta.json
demo-assets/token_honesty/: token_counts.json
docs/handoff/: CONTRACTS.md  README.md  RUNBOOK.md
docs/handoff/integration/: 05-testing-agent.md
docs/handoff/peyton/: 01-inference-engine.md  02-infra-storage.md  03-agent-runner.md  04-web-console.md  aws-runbook.md  lambda-runbook.md
docs/handoff/phase-2/: README.md  W1-final-wiring.md
docs/handoff/phase-2/notes/: p1-box.md  p1-bringup-metrics.md  p1-lambda-box.md  p2-mi-validation.md  p3-e2e-runner.md  p4-console-live.md  r1-banks.md  r2-efficacy.md  r3-data.md  (+1 more)
docs/handoff/rahul/: 01-bank-compiler.md  02-demo-assets-and-data.md
infra/: docker-compose.yml
infra/clickhouse/: schema.sql
scripts/: build_demo_banks.py  capture_dom.py  ch_init.sh  check_wiring.py  compile_real_banks.py  lambda_setup.sh  measure_efficacy.py  run_demo.sh  upload_banks.py  validate_banks_against_engine.py  verify_real_banks.py
scripts/tests/: conftest.py  test_byte_length_invariant.py  test_token_honesty.py  test_upload_idempotent.py
tests/: README.md
tests/fixtures/tiny_bank/: make_tiny_bank.py
tests/integration/: .gitkeep  KNOWN_ISSUES.md  conftest.py  pytest.ini  test_01_bank_binary_contract.py  test_02_clickhouse_roundtrip.py  test_03_engine_startup_preload.py  test_04_injection_changes_logits.py  test_05_unknown_page_fallback.py  test_06_ws_event_flow.py  test_07_runner_against_real_engine.py  test_08_popup_chaos_flow.py  test_09_token_metrics_honesty.py  test_10_console_renders_live_run.py  test_11_baseline_mode_e2e.py
tests/mocks/: .gitkeep  mock_inference.py  mock_ws_feed.py
(+13 files in other folders)
