[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runner"
version = "0.1.0"
description = "AgentInception agent runner: Playwright loop, baseline + mi modes, token metrics."
requires-python = ">=3.10"
dependencies = [
    "agentinception-shared",
    "playwright>=1.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real Llama tokenizer for exact token counts; the runner degrades gracefully
# to a heuristic counter when this is absent.
tokenizer = ["transformers==4.46.*"]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.scripts]
agent-runner = "agent_runner.cli:main"

[tool.setuptools]
packages = ["agent_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "gpu: requires the real inference engine on a GPU box (set INFERENCE_URL)",
    "slow: end-to-end run against the real engine and/or a live browser",
    "clickhouse: requires a reachable ClickHouse (set CLICKHOUSE_URL)",
]
