[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-bank-compiler"
version = "0.1.0"
description = "Offline KV-bank compiler: DOM -> Haiku summary -> Llama -> canonical pre-RoPE banks. (B1)"
requires-python = ">=3.10"
dependencies = [
    "ghost-shared",
    "numpy>=1.24",
]

[project.optional-dependencies]
runtime = [
    "transformers==4.46.*",
    "torch",
    "accelerate",
    "anthropic",
    "playwright",
    "beautifulsoup4",
]
test = ["pytest>=7"]

[project.scripts]
bank-compiler = "bank_compiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
