[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-engine"
version = "0.1.0"
description = "AgentInception inference engine (A1): Llama-3.1-8B + MI attention at layers [8,12,16,20], FastAPI step API + WS event hub."
requires-python = ">=3.10"
dependencies = [
    "transformers==4.46.*",        # custom attention is version-sensitive; pinned per CONTRACTS §1
    "torch>=2.4,<2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "clickhouse-connect>=0.7",
    "numpy>=1.26",
    "accelerate>=0.34",
    "pydantic>=2.7",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/inference_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:transformers.*"]
markers = [
    "gpu: real Llama-3.1-8B + real-bank validation; auto-skipped without CUDA (P2)",
]
